--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
-    "html-to-image": "^1.11.11",
+    "html-to-image": "1.11.11",
     "jsonc-parser": "^3.2.0",
     "lodash.debounce": "^4.0.8",
     "next": "14.2.35",
